--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "neal-react": "file:../neal-react",
+    "node-sass": "^4.5.3",
     "postcss-loader": "^1.1.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^2.8.1",
+    "sass-loader": "^6.0.5",
     "static-site-generator-webpack-plugin": "^3.0.0",
+    "style-loader": "^0.13.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
   }
