--- a/package.json
+++ b/package.json
@@ -14,24 +14,26 @@
   "author": "Steven Iseki",
   "license": "MIT",
   "dependencies": {
-    "autoprefixer": "^6.5.3",
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
+    "amdefine": "^1.0.1",
+    "async": "^2.4.1",
+    "autoprefixer": "^6.7.7",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "neal-react": "file:../neal-react",
     "node-sass": "^4.5.3",
-    "postcss-loader": "^1.1.1",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "postcss-loader": "^1.3.3",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "react-router": "^2.8.1",
     "sass-loader": "^6.0.5",
-    "static-site-generator-webpack-plugin": "^3.0.0",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.15.1"
+    "static-site-generator-webpack-plugin": "^3.4.1",
+    "style-loader": "^0.13.2",
+    "webpack": "^1.15.0",
+    "webpack-dev-server": "^1.16.5"
   }
 }
